Security configurations classes was added and configured

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,8 @@ spring.jpa.hibernate.ddl-auto=${SPRING_JPA_HIBERNATE_DDL_AUTO:create}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.liquibase.enabled=false
+
+jwt.secret=${JWT_SECRET:o5idl8b84xd91jph}
+jwt.expired=${JWT_EXPIRED:3600000}
+
+#server.error.include-stacktrace=never
