Add main entities, DTOs, mappers, repositories, controllers, services. Add liquibase configuration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,14 @@
 spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/database}
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME:postgres}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:password}
-spring.jpa.hibernate.ddl-auto=${SPRING_JPA_HIBERNATE_DDL_AUTO:create}
+spring.jpa.hibernate.ddl-auto=${SPRING_JPA_HIBERNATE_DDL_AUTO:validate}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-spring.liquibase.enabled=false
+spring.liquibase.enabled=true
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.format_sql=true
+
+#server.error.include-stacktrace=never
 
 jwt.secret=${JWT_SECRET:o5idl8b84xd91jph}
 jwt.expired=${JWT_EXPIRED:3600000}
-
-#server.error.include-stacktrace=never
